--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="header-container">
       <div class="header-left">
         <div class="logo-container">
-          <img src="assets/logo-left.png" alt="Left Logo" class="header-logo">
+          <img src="logo-left.png" alt="Left Logo" class="header-logo">
         </div>
         <a href="#" class="logo"><span class="script-font">The</span> Media<span>Movers</span></a>
       </div>
@@ -42,7 +42,7 @@
           </ul>
         </nav>
         <div class="logo-container desktop-only">
-          <img src="assets/logo-right.jpg" alt="Right Logo" class="header-logo">
+          <img src="logo-right.jpg" alt="Right Logo" class="header-logo">
         </div>
       </div>
     </div>
@@ -98,7 +98,7 @@
         <h3 class="group-title">Advisor</h3>
         <div class="team-grid single-card">
           <div class="team-card clickable" onclick="openModal('pitambar')">
-            <img src="assets/Pitambar.jpeg" alt="Pitambar Sahu" class="card-img">
+            <img src="Pitambar.jpeg" alt="Pitambar Sahu" class="card-img">
             <div class="card-content">
               <h4>Pitambar Sahu</h4>
               <p class="role">Faculty Advisor</p>
@@ -112,14 +112,14 @@
         <h3 class="group-title">Coordinators</h3>
         <div class="team-grid">
           <div class="team-card clickable" onclick="openModal('giridhari')">
-            <img src="assets/Giridhari.jpg" alt="Giridhari Padhy" class="card-img">
+            <img src="Giridhari.jpg" alt="Giridhari Padhy" class="card-img">
             <div class="card-content">
               <h4>Giridhari Padhy</h4>
               <p class="role">Coordinator (Media Production)</p>
             </div>
           </div>
           <div class="team-card clickable" onclick="openModal('meghaa')">
-            <img src="assets/Meghaa.png" alt="P. D. Meghaa Rani" class="card-img">
+            <img src="Meghaa.png" alt="P. D. Meghaa Rani" class="card-img">
             <div class="card-content">
               <h4>P. D. Meghaa Rani</h4>
               <p class="role">Coordinator (Creative Projects)</p>
@@ -134,21 +134,21 @@
         <h3 class="group-title">Leads</h3>
         <div class="team-grid">
           <div class="team-card clickable" onclick="openModal('simran')">
-            <img src="assets/Simran.png" alt="D. Simran Patra" class="card-img">
+            <img src="Simran.png" alt="D. Simran Patra" class="card-img">
             <div class="card-content">
               <h4>D.Simran Patra</h4>
               <p class="role">Lead, Art & Visuals</p>
             </div>
           </div>
           <div class="team-card clickable" onclick="openModal('meghna')">
-            <img src="assets/Meghna.png" alt="Meghna Panda" class="card-img">
+            <img src="Meghna.png" alt="Meghna Panda" class="card-img">
             <div class="card-content">
               <h4>Meghna Panda</h4>
               <p class="role">Lead, Communications & Media</p>
             </div>
           </div>
           <div class="team-card clickable" onclick="openModal('ritesh')">
-            <img src="assets/Ritesh.jpg" alt="Challa Ritesh" class="card-img">
+            <img src="Ritesh.jpg" alt="Challa Ritesh" class="card-img">
             <div class="card-content">
               <h4>Challa Ritesh</h4>
               <p class="role">Lead, Reels & Shorts</p>
@@ -162,21 +162,21 @@
         <h3 class="group-title">Associates</h3>
         <div class="team-grid">
           <div class="team-card clickable" onclick="openModal('snehal')">
-            <img src="assets/Snehal.jpg" alt="Snehal Panda" class="card-img">
+            <img src="Snehal.jpg" alt="Snehal Panda" class="card-img">
             <div class="card-content">
               <h4>Snehal Panda</h4>
               <p class="role">Associate, Photography</p>
             </div>
           </div>
           <div class="team-card clickable" onclick="openModal('komalkant')">
-            <img src="assets/Komalkant.png" alt="Komalkant Mohapatro" class="card-img">
+            <img src="Komalkant.png" alt="Komalkant Mohapatro" class="card-img">
             <div class="card-content">
               <h4>Komalkant Mohapatro</h4>
               <p class="role">Associate, Graphic Design</p>
             </div>
           </div>
           <div class="team-card clickable" onclick="openModal('slok')">
-            <img src="assets/Slok.png" alt="Slok Samarth Swain" class="card-img">
+            <img src="Slok.png" alt="Slok Samarth Swain" class="card-img">
             <div class="card-content">
               <h4>Slok Samarth Swain</h4>
               <p class="role">Associate, Creative Writing</p>
@@ -190,27 +190,27 @@
         <h3 class="group-title">Media Crew</h3>
         <div class="team-grid">
           <div class="team-card clickable" onclick="openModal('pratik')">
-            <img src="assets/Pratik.jpg" alt="Pratik Prusty" class="card-img">
+            <img src="Pratik.jpg" alt="Pratik Prusty" class="card-img">
             <div class="card-content">
               <h4>Pratik Prusty</h4>
               <p class="role">Media Crew</p>
             </div>
           </div>
-          <div class="team-card clickable" onclick="openModal('sunil')"> <img src="assets/Sunil.jpg"
+          <div class="team-card clickable" onclick="openModal('sunil')"> <img src="Sunil.jpg"
               alt="Sunil Kumar Sasamal" class="card-img">
             <div class="card-content">
               <h4>Sunil Kumar Sasamal</h4>
               <p class="role">Media Crew</p>
             </div>
           </div>
-          <div class="team-card clickable" onclick="openModal('pratikhya')"> <img src="assets/Pratikhya.jpg"
+          <div class="team-card clickable" onclick="openModal('pratikhya')"> <img src="Pratikhya.jpg"
               alt="Pratikhya Acharya" class="card-img">
             <div class="card-content">
               <h4>Pratikhya Acharya</h4>
               <p class="role">Media Crew</p>
             </div>
           </div>
-          <div class="team-card clickable" onclick="openModal('rudra')"> <img src="assets/Rudra.jpg"
+          <div class="team-card clickable" onclick="openModal('rudra')"> <img src="Rudra.jpg"
               alt="Rudra Prasad Panda" class="card-img">
             <div class="card-content">
               <h4>Rudra Prasad Panda</h4>
@@ -218,97 +218,97 @@
             </div>
           </div>
           <div class="team-card clickable" onclick="openModal('saumya')">
-            <img src="assets/Saumya.jpeg" alt="Saumya Saurabha Jena" class="card-img">
+            <img src="Saumya.jpeg" alt="Saumya Saurabha Jena" class="card-img">
             <div class="card-content">
               <h4>Saumya Saurabha Jena</h4>
               <p class="role">Media Crew</p>
             </div>
           </div>
-          <div class="team-card clickable" onclick="openModal('subham')"> <img src="assets/Subham.jpg"
+          <div class="team-card clickable" onclick="openModal('subham')"> <img src="Subham.jpg"
               alt="Subham Kumar Mishra" class="card-img">
             <div class="card-content">
               <h4>Subham Kumar Mishra</h4>
               <p class="role">Media Crew</p>
             </div>
           </div>
-          <div class="team-card clickable" onclick="openModal('aniruddha')"> <img src="assets/Aniruddha.jpg"
+          <div class="team-card clickable" onclick="openModal('aniruddha')"> <img src="Aniruddha.jpg"
               alt="Aniruddha Sahu" class="card-img">
             <div class="card-content">
               <h4>Aniruddha Sahu</h4>
               <p class="role">Media Crew</p>
             </div>
           </div>
-          <div class="team-card clickable" onclick="openModal('manoswini')"> <img src="assets/Manoswini.jpg"
+          <div class="team-card clickable" onclick="openModal('manoswini')"> <img src="Manoswini.jpg"
               alt="Manoswini Nahak" class="card-img">
             <div class="card-content">
               <h4>Manoswini Nahak</h4>
               <p class="role">Media Crew</p>
             </div>
           </div>
-          <div class="team-card clickable" onclick="openModal('adarsh')"> <img src="assets/Adarsh.jpg"
+          <div class="team-card clickable" onclick="openModal('adarsh')"> <img src="Adarsh.jpg"
               alt="Adarsh Acharya" class="card-img">
             <div class="card-content">
               <h4>Adarsh Acharya</h4>
               <p class="role">Media Crew</p>
             </div>
           </div>
-          <div class="team-card clickable" onclick="openModal('kartik')"> <img src="assets/Kartik.jpg"
+          <div class="team-card clickable" onclick="openModal('kartik')"> <img src="Kartik.jpg"
               alt="P. Kartik Reddy" class="card-img">
             <div class="card-content">
               <h4>P. Kartik Reddy</h4>
               <p class="role">Media Crew</p>
             </div>
           </div>
-          <div class="team-card clickable" onclick="openModal('subhankhi')"> <img src="assets/Subhankhi.jpg"
+          <div class="team-card clickable" onclick="openModal('subhankhi')"> <img src="Subhankhi.jpg"
               alt="Subhankhi Sahu" class="card-img">
             <div class="card-content">
               <h4>Subhankhi Sahu</h4>
               <p class="role">Media Crew</p>
             </div>
           </div>
-          <div class="team-card clickable" onclick="openModal('bharat')"> <img src="assets/Bharat.png"
+          <div class="team-card clickable" onclick="openModal('bharat')"> <img src="Bharat.png"
               alt="D. Bharat Rao" class="card-img">
             <div class="card-content">
               <h4>D. Bharat Rao</h4>
               <p class="role">Media Crew</p>
             </div>
           </div>
-          <div class="team-card clickable" onclick="openModal('sandeep')"> <img src="assets/Sandeep.jpg"
+          <div class="team-card clickable" onclick="openModal('sandeep')"> <img src="Sandeep.jpg"
               alt="Sandeep Kumar Pradhan" class="card-img">
             <div class="card-content">
               <h4>Sandeep Kumar Pradhan</h4>
               <p class="role">Media Crew</p>
             </div>
           </div>
-          <div class="team-card clickable" onclick="openModal('maheswar')"> <img src="assets/Maheswar.jpg"
+          <div class="team-card clickable" onclick="openModal('maheswar')"> <img src="Maheswar.jpg"
               alt="B. Maheswar" class="card-img">
             <div class="card-content">
               <h4>B. Maheswar</h4>
               <p class="role">Media Crew</p>
             </div>
           </div>
-          <div class="team-card clickable" onclick="openModal('hounouvi')"> <img src="assets/Hounouvi.jpg"
+          <div class="team-card clickable" onclick="openModal('hounouvi')"> <img src="Hounouvi.jpg"
               alt="Hounouvi Folly Boris Daniel" class="card-img">
             <div class="card-content">
               <h4>Hounouvi Folly Boris Daniel</h4>
               <p class="role">Media Crew</p>
             </div>
           </div>
-          <div class="team-card clickable" onclick="openModal('akhil')"> <img src="assets/Akhil.jpg"
+          <div class="team-card clickable" onclick="openModal('akhil')"> <img src="Akhil.jpg"
               alt="Akhil Kumar Panigrahi" class="card-img">
             <div class="card-content">
               <h4>Akhil Kumar Panigrahi</h4>
               <p class="role">Media Crew</p>
             </div>
           </div>
-          <div class="team-card clickable" onclick="openModal('priyanka')"> <img src="assets/Priyanka.jpg"
+          <div class="team-card clickable" onclick="openModal('priyanka')"> <img src="Priyanka.jpg"
               alt="Priyanka Panigrahy" class="card-img">
             <div class="card-content">
               <h4>Priyanka Panigrahy</h4>
               <p class="role">Media Crew</p>
             </div>
           </div>
-          <div class="team-card clickable" onclick="openModal('shivanshi')"> <img src="assets/Shivanshi.jpg"
+          <div class="team-card clickable" onclick="openModal('shivanshi')"> <img src="Shivanshi.jpg"
               alt="Shivanshi Padhi" class="card-img">
             <div class="card-content">
               <h4>Shivanshi Padhi</h4>
@@ -316,14 +316,14 @@
             </div>
           </div>
           <div class="team-card clickable" onclick="openModal('arpita')">
-            <img src="assets/ARPITA.jpg" alt="Arpita Rout" class="card-img">
+            <img src="ARPITA.jpg" alt="Arpita Rout" class="card-img">
             <div class="card-content">
               <h4>Arpita Rout</h4>
               <p class="role">Media Crew</p>
             </div>
           </div>
           <div class="team-card clickable" onclick="openModal('subhransu')">
-            <img src="assets/Subhransu.jpg" alt="Subhransu Sekhar Pradhan" class="card-img">
+            <img src="Subhransu.jpg" alt="Subhransu Sekhar Pradhan" class="card-img">
             <div class="card-content">
               <h4>Subhransu Sekhar Pradhan</h4>
               <p class="role">Media Crew</p>
@@ -345,7 +345,7 @@
         <!-- Logo and Description -->
         <div class="footer-section footer-about">
           <div class="footer-logo">
-            <img src="assets/logo-left.png" alt="MediaMovers Logo" class="footer-logo-img">
+            <img src="logo-left.png" alt="MediaMovers Logo" class="footer-logo-img">
             <span class="footer-logo-text"><span class="script-font">The</span> Media<span>Movers</span></span>
           </div>
           <p class="footer-description">Your trusted partner in creative storytelling and media excellence. We bridge
@@ -516,5 +516,6 @@
   </script>
 
 </body>
+
 
 </html>
