--- a/index.html
+++ b/index.html
@@ -186,14 +186,14 @@
               <p class="role">Media Crew</p>
             </div>
           </div>
-          <div class="team-card clickable" onclick="openModal('sunil')"> <img src="Sunil.jpg"
+          <div class="team-card clickable" onclick="openModal('sunil')"> <img src="SUNIL.jpg"
               alt="Sunil Kumar Sasamal" class="card-img">
             <div class="card-content">
               <h4>Sunil Kumar Sasamal</h4>
               <p class="role">Media Crew</p>
             </div>
           </div>
-          <div class="team-card clickable" onclick="openModal('pratikhya')"> <img src="Pratikhya.jpg"
+          <div class="team-card clickable" onclick="openModal('pratikhya')"> <img src="PRATIKHYA.jpg"
               alt="Pratikhya Acharya" class="card-img">
             <div class="card-content">
               <h4>Pratikhya Acharya</h4>
@@ -214,7 +214,7 @@
               <p class="role">Media Crew</p>
             </div>
           </div>
-          <div class="team-card clickable" onclick="openModal('subham')"> <img src="Subham.jpg"
+          <div class="team-card clickable" onclick="openModal('subham')"> <img src="SUBHAM.jpg"
               alt="Subham Kumar Mishra" class="card-img">
             <div class="card-content">
               <h4>Subham Kumar Mishra</h4>
@@ -228,7 +228,7 @@
               <p class="role">Media Crew</p>
             </div>
           </div>
-          <div class="team-card clickable" onclick="openModal('manoswini')"> <img src="Manoswini.jpg"
+          <div class="team-card clickable" onclick="openModal('manoswini')"> <img src="MANOSWINI.jpg"
               alt="Manoswini Nahak" class="card-img">
             <div class="card-content">
               <h4>Manoswini Nahak</h4>
@@ -242,14 +242,14 @@
               <p class="role">Media Crew</p>
             </div>
           </div>
-          <div class="team-card clickable" onclick="openModal('kartik')"> <img src="Kartik.jpg"
+          <div class="team-card clickable" onclick="openModal('kartik')"> <img src="KARTIK.jpg"
               alt="P. Kartik Reddy" class="card-img">
             <div class="card-content">
               <h4>P. Kartik Reddy</h4>
               <p class="role">Media Crew</p>
             </div>
           </div>
-          <div class="team-card clickable" onclick="openModal('subhankhi')"> <img src="Subhankhi.jpg"
+          <div class="team-card clickable" onclick="openModal('subhankhi')"> <img src="SHUBHANKI.jpg"
               alt="Subhankhi Sahu" class="card-img">
             <div class="card-content">
               <h4>Subhankhi Sahu</h4>
@@ -263,7 +263,7 @@
               <p class="role">Media Crew</p>
             </div>
           </div>
-          <div class="team-card clickable" onclick="openModal('sandeep')"> <img src="Sandeep.jpg"
+          <div class="team-card clickable" onclick="openModal('sandeep')"> <img src="SANDEEP.jpg"
               alt="Sandeep Kumar Pradhan" class="card-img">
             <div class="card-content">
               <h4>Sandeep Kumar Pradhan</h4>
@@ -500,3 +500,4 @@
 </body>
 
 </html>
+
