--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
               <p class="role">Media Crew</p>
             </div>
           </div>
-          <div class="team-card clickable" onclick="openModal('subhankhi')"> <img src="SHUBHANKI.jpg"
+          <div class="team-card clickable" onclick="openModal('subhankhi')"> <img src="SUBHANKI.jpg"
               alt="Subhankhi Sahu" class="card-img">
             <div class="card-content">
               <h4>Subhankhi Sahu</h4>
@@ -500,4 +500,5 @@
 </body>
 
 </html>
+
 
