--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
     <div class="header-container">
       <div class="header-left">
         <div class="logo-container">
-          <img src="assets/logo-left.png" alt="Left Logo" class="header-logo">
+          <img src="logo-left.png" alt="Left Logo" class="header-logo">
         </div>
         <a href="index.html" class="logo"><span class="script-font">The</span> Media<span>Movers</span></a>
       </div>
@@ -41,7 +41,7 @@
           </ul>
         </nav>
         <div class="logo-container desktop-only">
-          <img src="assets/logo-right.jpg" alt="Right Logo" class="header-logo">
+          <img src="logo-right.jpg" alt="Right Logo" class="header-logo">
         </div>
       </div>
     </div>
@@ -140,7 +140,7 @@
         <!-- Logo and Description -->
         <div class="footer-section footer-about">
           <div class="footer-logo">
-            <img src="assets/logo-left.png" alt="MediaMovers Logo" class="footer-logo-img">
+            <img src="logo-left.png" alt="MediaMovers Logo" class="footer-logo-img">
             <span class="footer-logo-text"><span class="script-font">The</span> Media<span>Movers</span></span>
           </div>
           <p class="footer-description">Your trusted partner in creative storytelling and media excellence. We bridge
@@ -219,5 +219,6 @@
   </script>
 
 </body>
+
 
 </html>
